Design header according to wireframe + changed from visibility:hidden to display:none to fix scroll issue in Chrome

--- a/vanilla/assets/style.css
+++ b/vanilla/assets/style.css
@@ -29,10 +29,17 @@ html {
 
 .page {
   position: absolute;
+  min-width: 100vw;
 }
+
 .header {
   min-width: min-content;
 }
+
+.logo {
+  transition: .5s height cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .text {
   max-width: 100vw;
 }
